Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -94,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1234'"
+       "int"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
    "source": [
     "num_to_string = 1234\n",
     "str(num_to_string)\n",
-    "type()"
+    "type(num_to_string)"
    ]
   },
   {
