--- a/index.ipynb
+++ b/index.ipynb
@@ -110,7 +110,7 @@
    ],
    "source": [
     "num_to_string = 1234\n",
-    "str(num_to_string)\n",
+    "nustr(num_to_string)\n",
     "type(num_to_string)"
    ]
   },
