--- a/index.ipynb
+++ b/index.ipynb
@@ -94,23 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "int"
+       "str"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "num_to_string = 1234\n",
-    "nustr(num_to_string)\n",
+    "num_to_string = str(num_to_string)\n",
     "type(num_to_string)"
    ]
   },
