Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -570,7 +570,7 @@
    "outputs": [],
    "source": [
     "name = \"Bart Simpson\"\n",
-    "name = name"
+    "name = name.replace('Simpson')"
    ]
   },
   {
